# clinic

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  deploy-staging.sh  deploy.sh  docker-compose.prod.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
.scannerwork/: report-task.txt
app/: __init__.py  auth.py  main.py  middleware.py  model.py  schemas.py  utils.py
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md  MONITORING.md  SECURITY.md
monitoring/: alert_rules.yml  prometheus.yml
scripts/: fix-format.sh  health-check.py
tests/: conftest.py  test_api.py  test_auth.py  test_middleware.py  test_model.py
